--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+
+    <title>ChocolateLand</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <load ="partials/header.html" />
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <main>
+      <load ="partials/hero.html" />
+      <load ="partials/advantages.html" />
+      <load ="partials/unique-components.html" />
+      <load ="partials/how-its-made.html" />
+      <load ="partials/our-products.html" />
+      <load ="partials/top-sellers.html" />
+      <load ="partials/reviews.html" />
+      <load ="partials/subscribe.html" />
+      <load ="partials/footer.html" />
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+      <!-- Modal windows -->
+      <load ="partials/buy-now.html" />
+      <load ="partials/leave-a-review.html" />
+      <load ="partials/explore-our-new.html" />
+
+      <load ="partials/overlay.html" />
+    </main>
 
     <script type="module" src="/main.js"></script>
   </body>
