--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
       <load ="partials/footer.html" />
 
       <!-- Modal windows -->
-      <load ="partials/buy-now.html" />
+      <!-- <load ="partials/buy-now.html" />
       <load ="partials/leave-a-review.html" />
-      <load ="partials/explore-our-new.html" />
+      <load ="partials/explore-our-new.html" /> -->
 
       <load ="partials/overlay.html" />
     </main>
