--- a/src/index.html
+++ b/src/index.html
@@ -47,5 +47,6 @@
 
     <script type="module" src="/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script src="./js/modal.js"></script>
   </body>
 </html>
