--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 
       <load ="partials/overlay.html" />
     </main>
-
+    <script src="./js/script.js"></script>
     <script type="module" src="/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   </body>
