--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,9 @@
       <load ="partials/leave-a-review.html" />
       <load ="partials/explore-our-new.html" />
 
+      <load ="partials/overlay.html" />
+
+
     </main>
     <script src="./js/script.js"></script>
     <script type="module" src="/main.js"></script>
