--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,11 @@
 
       <!-- Modal windows -->
       <load ="partials/buy-now.html" />
+      <load ="partials/pay-now.html" />
       <load ="partials/leave-a-review.html" />
       <load ="partials/explore-our-new.html" />
 
       <load ="partials/overlay.html" />
-
-
-
     </main>
     <script src="./js/script.js"></script>
     <script type="module" src="/main.js"></script>
