--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
 
       <load ="partials/overlay.html" />
     </main>
-    <script src="./js/script.js"></script>
     <script type="module" src="/main.js"></script>
+    <!-- <script type="module" src="/js/script.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
